# cityscape

./: .gitignore  haplos.sh
bldgen/: AUTHORS  ChangeLog  NEWS  configure.ac  readme.txt
bldgen/m4/: ax_prog_doxygen.m4
bldgen/src/: ArgParser.cpp  ArgParser.h  Assert.h  BuildingGenerator.cpp  BuildingGenerator.h  Configuration.cpp  Configuration.h  ImageGenerator.cpp  ImageGenerator.h  Makefile.am  OsmBuilding.h  OsmNode.cpp  OsmSection.h  OsmTags.cpp  OsmTags.h  OsmWay.cpp  OsmXFigHelper.cpp  OsmXFigHelper.h  Utils.h  XFigHelper.cpp  XFigHelper.h
cab_sim/: AUTHORS  Makefile.am  README
cab_sim/src/: Area.cpp  Area.h  Building.cpp  Building.h  CabSim.h  IndexedPriorityQueue.h  Makefile.am  Node.cpp  PathSegment.h  PopGrid.cpp  PopGrid.h  Ring.h  SimConfig.h  Utilities.h  Way.h  XFigHelper.cpp  main.cpp
cab_sim/viewer/: CabSimMap.js  CabSimViewer.html  TaxiLayer.js
defense/Data Analysis/: BuildingEmployment2012Data.xls  FamilySize_2015.xls  ScheduleTypeCalculatons_2015.xlsx  Transmission Rate and Vaccination Testing.xlsx
defense/HAPLOS Data Sets/Cinci_NoModel/: buildingStatistics.txt  populationStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T46_Imm0_3/: populationStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T46_Imm47_1/: buildingExport.hpb
defense/HAPLOS Data Sets/MidWorld_T46_Imm47_2/: buildingExport.hpb
defense/HAPLOS Data Sets/MidWorld_T46_Imm47_3/: buildingExport.hpb  buildingStatistics.txt  populationStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T56_Imm0_2/: buildingExport.hpb  buildingStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T56_Imm0_3/: populationStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T66_Imm0_3/: buildingStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T76_Imm0_1/: buildingExport.hpb  buildingStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T76_Imm0_2/: populationStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T86_Imm0_1/: buildingExport.hpb  populationStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T86_Imm0_2/: buildingStatistics.txt  populationStatistics.txt
defense/HAPLOS Data Sets/MidWorld_T86_Imm0_3/: buildingExport.hpb  populationStatistics.txt
haplos/: Makefile  README.txt  haplos.sh
haplos/bldgen/: Makefile.am  Makefile.common.am  configure.ac  readme.txt
haplos/bldgen/docs/: Doxyfile
haplos/bldgen/src/: Boost.h  BuildingGenerator.cpp  ImageGenerator.cpp  Makefile.am  OsmBuilding.cpp  OsmNode.h  OsmSection.cpp  OsmSection.h  OsmWay.h  OsmXFigHelper.cpp  Utils.cpp  XFigHelper.h  main.cpp
haplos/bldgen/tests/: miami.osm
haplos/cab_sim/: ChangeLog  NEWS  configure.ac
haplos/cab_sim/src/: CabSim.cpp  CabSim.h  Makefile.am  Node.h  OSMData.cpp  OSMData.h  PathFinder.cpp  PathFinder.h  PathSegment.cpp  PopGrid.cpp  PopGrid.h  PopRing.cpp  PopRing.h  Ring.cpp  SimConfig.cpp  Utilities.cpp  Way.cpp  XFigHelper.h
haplos/cab_sim/viewer/: CabSimMap.css  Taxi.js
haplos/haplos/: Makefile
haplos/model_gen/: Building.cpp  Building.h  DrawBuildings.h  DrawShapes.cpp  Makefile.am  ModelGenerator.cpp  ModelGenerator.h  NEWS  Node.cpp  OSMData.cpp  OSMData.h  Options.cpp  Options.h  PUMS.cpp  PUMS.h  PUMSHousehold.cpp  PUMSHousehold.h  PathFinder.cpp  PathFinder.h  PathFinderTester.cpp  PathFinderTester.h  PathSegment.cpp  PopRing.cpp  PopRing.h  PopulationRingGenerator.cpp  PopulationRingGenerator.h  Ring.cpp  Ring.h  ShapeFile.cpp  ShapeFile.h  Utilities.cpp  Utilities.h  Way.cpp  XFigHelper.cpp  config.h  configure.ac  main.cpp
haplos/model_gen/tests/chicago/: Chicago_model_notes.odt  DrawCommunityMap  bld_info.txt  chicago_adjustments.txt  gen_area_info.sh  plot_times.R  run.sh
haplos/model_gen/tests/chicago/taxi_ride_data/: plot_PickupArea.gp
haplos/nbproject/: configurations.xml
haplos/proposal/: proposal_8.docx
haplos/src/: ConfigFile.cpp  ConfigFile.h  Family.cpp  Family.h  Haplos.cpp  Haplos.h  ImageGen.cpp  ImageGen.h  ImageGenerator.h  Location.cpp  Location.h  Person.cpp  Person.h  Policy.cpp  Policy.h  Population.cpp  Population.h  SedacReader.cpp  SedacReader.h  XFigHelper.cpp  XFigImageGenerator.cpp  buildingGeneratorHelper.pcpp  buildingHelper.pcpp  haplos.cpp  main.cpp  scheduleGeneratorHelper.pcpp
haplos/tests/: EmployedAdultTests.py  SchoolChildTests.py  TestFamily.py  TestPerson.py  UnemployedAdultTests.py  YoungSchoolChildTests.py  main.py
model_gen/: .gitignore  2026-05-22-204119-what-files-do-i-need-to-create-a-cityscape-model.txt  2026-05-23-141905-phily-modelgen.txt  2026-05-23-143105-phily-modelgen.txt  2026-05-23-150457-i-want-to-be-able-to-generate-a-model-from-a-smal.txt  AUTHORS  AccidentsCollator.cpp  AccidentsCollator.h  Building.cpp  Building.h  DrawBuildings.cpp  DrawBuildings.h  DrawShapes.cpp  DrawShapes.h  IndexedPriorityQueue.h  LinearWorkBuildingAssigner.cpp  LinearWorkBuildingAssigner.h  MPIHelper.h  Makefile.am  ModelGenerator.cpp  ModelGenerator.h  Node.h  OSMData.cpp  OSMData.h  PUMS.cpp  PUMS.h  PUMSHousehold.cpp  PUMSHousehold.h  PUMSPerson.cpp  PUMSPerson.h  PathFinder.cpp  PathFinder.h  PathFinderTester.cpp  PathFinderTester.h  PathSegment.cpp  PathSegment.h  PopRing.h  PopulationRingGenerator.cpp  PopulationRingGenerator.h  README.md  (+31 more)
model_gen/.claude/: settings.local.json
model_gen/tests/: baseline.txt  debug.awk
model_gen/tests/chicago/: .gitignore  Chicago_model_notes.odt  DrawCommunityMap.cpp  accident_nodes_2024.tsv  bld_info.txt  chicago_adjustments.txt  chicago_model_with_schedules_two.txt.REMOVED.git-id  error_logs_collator.txt  error_logs_schedules.txt  gen_area_info.sh  gen_trvl_time_stats.sh  ignore_buildings.txt  plot_buildings_checked.R  plot_times.R  plot_trvl_time_correlation.R  plot_way_density.R  run.sh  run_schedule_risk_analysis.sh
model_gen/tests/chicago/.claude/: settings.local.json
model_gen/tests/chicago/boundaries/: geo_export_79ca7e07-f2ad-4996-9ba2-848b23ace7f5.dbf
model_gen/tests/chicago/lspop2011/: README.txt
model_gen/tests/chicago/taxi_ride_data/: AggregateDayOfWeek.cpp  AggregateSrcDest.cpp  box_plot_rides.gp  plot_area_rides.gp  plot_ride_matrix.gp  plot_taxi_correlation.R  run_way_risk_analysis.sh
(+2735 files in other folders)
